import public "base.proto";

package bbproto;


message ReqShopBuy {
    optional ProtoHeader	header				= 1;
	optional string			productId			= 2;
}

message RspShopBuy {
    optional ProtoHeader	header				= 1;
}

